<resources>
    <string name="app_name">StoryApp</string>
    <string name="email">Email</string>
    <string name="copyright">© YudaWahfiudin</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">CREATE NEW ACCOUNT</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="em_invalid_email">Invalid email</string>
    <string name="error_empty_email">Please insert your email</string>
    <string name="error_empty_password">Please insert your password</string>
    <string name="em_password_min_length">Password must be longer than 6 character</string>
    <string name="error_empty_name">Please insert your name</string>
    <string name="name_text_view">Name</string>
    <string name="login_failed">Login Failed</string>
    <string name="network_unavailable">Network Unavailable!</string>
    <string name="second_ago">second ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="loading">Loading</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="signup_failed">Registered Failed</string>
    <string name="account_created">Account Created</string>
    <string name="text_uploaded">Uploaded on</string>
    <string name="story_uploaded">Story Upload</string>
    <string name="check_input">Check Your Input</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="tv_description">Description</string>
    <string name="previewstory">previewStory</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="didnt_get_permission">Didn\'t get permission</string>
    <string name="input_image_first">Input Image First</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="please_enter_picture">Please enter picture</string>
    <string name="imageregister">imageRegister</string>
    <string name="imagelogin">imageLogin</string>
    <string name="maps">maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="story_app">Story App</string>
    <string name="imagesplashscreen">imageSplashScreen</string>
    <string name="retry">Retry</string>
    <string name="story_from">Story from</string>
</resources>